refactor api activacion usuario + integracion envio email
